--- a/tasks/install/prepare.yml
+++ b/tasks/install/prepare.yml
@@ -20,20 +20,30 @@
         shell: /sbin/nologin
         system: true
         createhome: true
-        home: /nonexistent
 
     - name: create directory
-      file:
-        path: "{{ home_assistant_user.home }}"
+      ansible.builtin.file:
         state: directory
-        mode: 0775
+        path: "{{ home_assistant_user.home }}"
         owner: "{{ home_assistant_user.owner }}"
         group: "{{ home_assistant_user.group }}"
+        mode: 02775
 
     - name: create storage directory
-      file:
-        path: "{{ home_assistant_user.home }}/.storage"
+      ansible.builtin.file:
         state: directory
-        mode: 02775
+        path: "{{ home_assistant_user.home }}/.storage"
         owner: "{{ home_assistant_user.owner }}"
         group: "{{ home_assistant_user.group }}"
+        mode: 02775
+
+- name: add user {{ home_assistant_user.owner }} to groups
+  ansible.builtin.user:
+    name: "{{ home_assistant_user.owner }}"
+    groups: "{{ item }}"
+    append: true
+  loop:
+    "{{ home_assistant_groups | sort | unique }}"
+  when:
+    - home_assistant_groups is defined
+    - home_assistant_groups | count > 0
