--- a/tasks/install/python-support.yml
+++ b/tasks/install/python-support.yml
@@ -26,7 +26,9 @@
         requirements: "{{ pip_requirements.requirements_file }}"
         state: present
         virtualenv: "{{ home_assistant_user.home }}"
-        extra_args: "{{ home_assistant_python_extra_args | default([]) | bodsch.core.python_extra_args(python_version=ansible_python.version,break_system_packages=False) | default(omit) }}"
+        extra_args: "{{ home_assistant_python_extra_args | default([]) |
+                          bodsch.core.python_extra_args(python_version=ansible_python.version, break_system_packages=False) | default(omit)
+                     }}"
       register: pip_install
       ignore_errors: true
       # no_log: true
@@ -53,7 +55,9 @@
             requirements: "{{ pip_requirements.requirements_file }}"
             state: present
             virtualenv: "{{ home_assistant_user.home }}"
-            extra_args: "{{ home_assistant_python_extra_args | default([]) | bodsch.core.python_extra_args(python_version=ansible_python.version,break_system_packages=False) | default(omit) }}"
+            extra_args: "{{ home_assistant_python_extra_args | default([]) |
+                              bodsch.core.python_extra_args(python_version=ansible_python.version, break_system_packages=False) | default(omit)
+                         }}"
 
         - name: uninstall build essentials
           ansible.builtin.package:
